--- a/velha.html
+++ b/velha.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joguinho da velhinha</title>
+    <title>Jogo da Velha</title>
     <link rel="stylesheet" href="./css/velha.css">
 </head>
 <body>
@@ -12,38 +12,11 @@
 
         <header>
 
-            <div class="painel-opcoes esconder">
-
-                <div class="painel-group">
-                    <span id="painel-usuario-x-nome"></span>   
-                    <span class="pontos">Pontos: <strong id="painel-usuario-x-pontos">0</strong></span>
-                </div>
-
-                <div class="painel-group">
-                    <span id="painel-usuario-o-nome"></span>
-                    <span class="pontos"> Pontos: <strong id="painel-usuario-o-pontos">0</strong></span>
-                </div>
-
-                <div class="proximo-jogar">
-                    <em><span>Próximo a jogar:</span> <strong id="proximo-jogador"></strong></em>
-                </div>
-
-            </div>
+            <div class="proximo-jogar"></div>
 
             <div class="opcoes-jogo">
-                
-                <div class="header-group">
-                    <label for="usuario-x">Usuario X</label>
-                    <input autocomplete="off" id="usuario-x" type="text">
-                </div>
-    
-                <div class="header-group">
-                    <label for="usuario-o">Usuario O</label>
-                    <input autocomplete="off" id="usuario-o" type="text">
-                </div>
-
-                <button id="btn-jogar">Jogar</button>
-   
+                <button id="btn-jogar-x">Jogar como X</button>
+                <button id="btn-jogar-o">Jogar como O</button>
             </div>
   
         </header>
@@ -59,9 +32,7 @@
         <div class="jogo-velha-9" ></div>
 
         <footer> 
-            <em>
-                <h4>Desenvolvido por Weberson Rodrigues.</h4>
-            </em> 
+            <button class="esconder" id="btn-reiniciar">Reiniciar</button>
         </footer>
     </div>
 
